# noir

./: Cargo.toml  EXTERNAL_NOIR_LIBRARIES.yml
.github/: benchmark_projects.yml
acvm-repo/acir/: README.md
acvm-repo/m31_blackbox_solver/: Cargo.toml
acvm-repo/m31_blackbox_solver/src/: lib.rs
dev/bench/: data.js
examples/bn254_blackbox_solver_example/: Cargo.toml  README.md  main.rs
examples/execute_program_demo/: Cargo.toml  README.md  main.rs
examples/m31_field_example/: Cargo.toml  README.md  main.rs
