[package]
name = "m31_blackbox_solver"
version = "1.0.0-beta.7"
edition = "2024"
authors = ["The Noir Team <team@noir-lang.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/noir-lang/noir/"
description = "M31 field black box function solver for ACVM"

[dependencies]
acvm = { workspace = true }
acir = { workspace = true }
acir_field = { workspace = true }
thiserror = { workspace = true } 